# shazam

./: .gitignore  TODO.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: code-quality.yml
app/: Example-iTunes-API.json  cron.py  ingession.py  model.py
notebooks/: rnd.ipynb
